--- a/src/components/Grids/grids.module.css
+++ b/src/components/Grids/grids.module.css
@@ -2,8 +2,11 @@
     display: flex;
     line-height: 1.2;
     overflow: hidden;
+    flex-direction: row;
+    align-items: center;
 }
 
 .justifyRight {
     justify-content: flex-end;
+    text-align: right;
 }
